# rest_practice

./: .gitignore  README.md  pyproject.toml
data/: hypothesis_prompt_instructions.txt
src/: drive_hypothesis_generation.ipynb
src/cfg/: lilrb2.yaml
src/data_io/: bio_data_query.py
src/hypotheses/: query_gemeni.py
src/llm/: llm_messenger.py
tests/: test_bio_data_query.py  test_llm_messenger.py  test_query_gemeni.py
